# vgpu-server

./: .gitignore  README.md  main.c  vgpu-server.sln  vgpu_cmd.c  vpgu-server.cbp  vpgu-server.depend  vpgu-server.layout
docs/: .~lock.protocoll.odt#  protocoll.odt
vgpu-server/: CMakeCache.txt  CMakeLists.txt  CPackConfig.cmake  CPackSourceConfig.cmake  CTestTestfile.cmake  DartConfiguration.tcl  Makefile  cmake_install.cmake  load-gou-opencl-int.h  load-gpu-opencl-int.h  load-gpu-opencl.c  main.c  read-gpu-opencl.c  read-gpu-opengl.h  vgpu-cmd.c  vgpu-common.h  vgpu-server  vgpu-server.cpp  vgpu-server.vcxproj  vgpu-server.vcxproj.filters  vgpu_cmd.c
x64/Debug/: vgpu-server.ilk
